<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/movie_list_thumbnail"
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/thumbnail"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher" />

    <RelativeLayout
        android:id="@+id/movie_list_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/movie_list_thumbnail">

    <TextView
        android:id="@+id/movie_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:textSize="20dp"
        android:text="@string/movie_title" />

    <TextView
        android:id="@+id/movie_list_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/movie_list_title"
        android:text="@string/movie_desc"
        android:textSize="9dp"
        android:maxLines="3"/>

    <TextView
        android:id="@+id/movie_list_actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/movie_list_desc"
        android:text="@string/movie_actors"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/movie_list_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/movie_list_actors"
        android:text="@string/movie_seen"
        android:textSize="11dp"/>
    </RelativeLayout>
</RelativeLayout>