<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_title"
            android:textSize="30dp" />

    <ImageView
        android:id="@+id/movie_detail_img"
        android:layout_width="140dp"
        android:layout_height="230dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/movie_detail_title"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/movie_detail_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/movie_detail_img"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/movie_detail_desc" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_desc"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButton_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/movie_radio_seen" />

        <RadioButton
            android:id="@+id/radioButton_want"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_radio_want" />

        <RadioButton
            android:id="@+id/radioButton_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_radio_like" />

    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />

    </LinearLayout>

</ScrollView>